force-app/main/default/objects/Account_Config__mdt/Account_Config__mdt.object-meta.xml
<CustomObject>
    <label>Account Config</label>
    <pluralLabel>Account Configs</pluralLabel>
</CustomObject>