force-app/main/default/objects/Account_Config__mdt/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <label>Component Name</label>
    <length>254</length>
    <type>Text</type>
</CustomField>