force-app/main/default/objects/Account_Config__mdt/fields/Config__c.field-meta.xml
<CustomField>
    <fullName>Config__c</fullName>
    <label>Config</label>
    <length>254</length>
    <type>Text</type>
</CustomField>